--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="login">
         <form action="" method="post">
             <input type="text" name="Nome" id="Nome" placeholder="Nome">
-            <input type="password" name="Senha" id="Senha" placeholder="Senha">
+            <input type="password" name="senha" id="senha" placeholder="Senha">
             <div class="persistente">
                 <input type="checkbox" name="Lembrar" id="Lembrar">
                 <label for="Lembrar">Mantenha-me conectado</label>
