--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             <input type="text" name="Nome" id="Nome" placeholder="Nome">
             <input type="password" name="senha" id="senha" placeholder="Senha">
             <div class="persistente">
-                <input type="checkbox" name="Lembrar" id="Lembrar">
-                <label for="Lembrar">Mantenha-me conectado</label>
+                <label for="Lembrar" class="switch">
+                    <input type="checkbox" name="Lembrar" id="Lembrar">
+                    <span class="slider round"></span>
+                    Mantenha-me conectado
+                </label>
             </div>
             <input type="submit" value="Fazer login">
             <a href="#">Esqueci minha senha...</a>
