--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <a href="#">Esqueci minha senha...</a>
         </form>
     </div>
+    <div class="criar-conta">
+        <p>Não tem uma conta?</p><a href="#">Crie uma aqui</a>
+    </div>
 </body>
 
 </html>
